Create Product with special tag and product type as child table

--- a/Areas/Admin/Views/ProductTypes/Create.cshtml
+++ b/Areas/Admin/Views/ProductTypes/Create.cshtml
@@ -9,7 +9,7 @@
 
 <br />
 
-<h2 class="text-info">Create Product TYpe</h2>
+<h2 class="text-info">Create Product Type</h2>
 <form asp-action="Create" method="post">
     <div class="p-4 border rounded">
         <div asp-validation-summary="ModelOnly" class="text-danger">
