--- a/Areas/Customer/Views/Home/Index.cshtml
+++ b/Areas/Customer/Views/Home/Index.cshtml
@@ -2,7 +2,33 @@
     ViewData["Title"] = "Home Page";
 }
 
-<div class="text-center">
-    <h1 class="display-4">Welcome</h1>
-    <p>Learn about <a href="https://docs.microsoft.com/aspnet/core">building Web apps with ASP.NET Core</a>.</p>
+@using OnLineShop.Models;
+@model List<Products>
+
+<br />
+<br />
+<div class="row">
+    @foreach (var product in Model)
+    {
+        <div class="col-4">
+            <div class="card mb-4">
+                <div class="card-header">
+                    <h4 class="my-0 font-weight-normal">
+                        <label style="font-size: 23px; color: steelblue;margin-bottom:10px">@product.Name</label>
+                    </h4>
+                    <img src="/@product.Image" alt="card image" class="card-img-bottom" style="height:300px"/>
+                </div>
+                <div class="card-header">
+                    <div class="d-flex align-content-between align-items-center">
+                        <div class="btn-group">
+                            <label style="font-size:20px;color:red"><b> Price : @product.Price</b></label>                        
+                        </div>
+                        <a asp-action="Details" asp-controller="Home" asp-route-id="@product.Id" style="margin-left:120px" class="btn btn-info fa-pull-right ">Details </a>
+
+                     </div>
+
+                  </div>
+            </div>
+        </div>
+    }
 </div>
